[NA] Added menu action item
- Added copies for trending and highest rated
- Added asset for trending

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="action_sort_trending">Trending First</string>
+    <string name="action_sort_highest_rated">Highest Rated</string>
 </resources>
